objects/Milestone1_Log__c.object
<CustomObject>
    <description>This object is a replica of the Old Weekly Status object(Miilestone1 Unmanaged package)</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <inlineHelpText>The details about the log. This is freeform text for user to capture whatever data they want to keep track of in the log.</inlineHelpText>
        <label>Detail</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Highlights_Last_Week__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Highlights Last Week</inlineHelpText>
        <label>Highlights Last Week</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_Project_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Expense</label>
        <referenceTo>MPM4_BASE__Milestone1_Expense__c</referenceTo>
        <relationshipName>Weekly_Status2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Milestone</label>
        <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
        <relationshipName>Weekly_Status2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
        <relationshipName>Weekly_Status2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_Project_Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Time</label>
        <referenceTo>MPM4_BASE__Milestone1_Time__c</referenceTo>
        <relationshipName>Weekly_Status2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_Project__c</fullName>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipName>Weekly_Status2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plans_This_Week__c</fullName>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Plans This Week</inlineHelpText>
        <label>Plans This Week</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A project expense we want to log some information about.</inlineHelpText>
        <label>Old Project Expense</label>
        <referenceTo>Milestone1_Expense__c</referenceTo>
        <relationshipName>Project_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A milestone we want to log about.</inlineHelpText>
        <label>Old Project Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipName>Project_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A project task we want to log some information about.</inlineHelpText>
        <label>Old Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipName>Project_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The project which we want to keep this log record for.</inlineHelpText>
        <label>Old Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Project_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Proforce 11/2014</description>
        <inlineHelpText>Report Date</inlineHelpText>
        <label>Report Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>The subject of this log entry.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The type of log. This can be used to order logs into different types.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly Status</fullName>
                    <default>true</default>
                    <label>Weekly Status</label>
                </value>
                <value>
                    <fullName>Project Log</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_Of_Year__c</fullName>
        <description>Proforce 11/2014</description>
        <formula>IF(CEILING(((Report_Date__c - DATE(YEAR(Report_Date__c), 1, 1) + 1) + 
MOD(DATE(YEAR(Report_Date__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7)=53,1,CEILING(((Report_Date__c - DATE(YEAR(Report_Date__c), 1, 1) + 1) + 
MOD(DATE(YEAR(Report_Date__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Week of Year (calculated)</inlineHelpText>
        <label>Week Of Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Old Weekly Status</label>
    <nameField>
        <label>Old Weekly Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Old Weekly Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>